<resources>
    <!-- Misc -->
    <string name="app_name">Quest</string>

    <!-- Generic -->
    <string name="generic_login">Login</string>
    <string name="generic_register">Register</string>
    <string name="no_internet_greeting">Oops!</string>
    <string name="no_internet_text">Parece que você está sem internet :(</string>
    <string name="no_internet_verify_connection">Verifique sua conexão e tente novamente!</string>
    <string name="generic_try_again">Tentar novamente</string>
    <string name="generic_username">\@{username}</string>
    <string name="generic_yes">Sim</string>
    <string name="generic_no">Não</string>

    <!-- Onboarding -->
    <string name="onboarding_title_page_one">Tire dúvidas</string>
    <string name="onboarding_title_page_two">Interaja</string>
    <string name="onboarding_title_page_three">Ajude</string>
    <string name="onboarding_text_page_one">Tire suas principais dúvidas sobre qualquer assunto da universidade!</string>
    <string name="onboarding_text_page_two">Conheça quem está com você nessa jornada e faça amigos!</string>
    <string name="onboarding_text_page_three">Ajude outros postando respostas e compartilhando conhecimento!</string>
    <string name="onboarding_start">Vamos lá!</string>

    <!-- Login -->
    <string name="login_label">Login</string>
    <string name="login_login">E-Mail</string>
    <string name="login_password">Senha</string>
    <string name="login_forgot_password">Esqueceu sua senha?</string>
    <string name="login_no_account_button">Não tem uma conta? Registre-se!</string>

    <!-- Register -->
    <string name="register_label">Criar Conta</string>
    <string name="full_name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="create_account">Cadastrar</string>
    <string-array name="schools_array">
        <item>UFU - Universidade Federal de Uberlândia</item>
        <item>UFTM - Universidade Federal do Triângulo Mineiro</item>
        <item>UNITRI - Centro Universitário do Triângulo</item>
        <item>UNIUBE - Universidade de Uberaba</item>
    </string-array>

    <!-- Forgot Password  -->
    <string name="reset_password_label">Resetar Senha</string>
    <string name="reset_password_info_label">Para receber uma nova senha, digite seu e-mail e toque no botão resetar.</string>
    <string name="reset_password_button">Resetar</string>

    <!-- Main -->
    <string name="main_home_bottombar_text">Home</string>
    <string name="main_chat_bottombar_text">Chat</string>
    <string name="main_board_bottombar_text">Board</string>
    <string name="main_notifications_bottombar_text">Notificações</string>
    <string name="cadastro">Cadastro</string>
    <string name="board_item_responses_text">{likes} likes • {responses} respostas</string>

    <!-- Board -->
    <string name="board_no_items_greeting_text">Sem itens no momento.</string>
    <string name="board_no_items_text">Não há nenhuma pergunta na sua área no moment.</string>
    <string name="board_no_items_suggestion_text">Que tal começar fazendo uma nova pergunta?</string>

    <!-- Create Quest-->
    <string name="create_new_quest">Nova Quest</string>
    <string name="create_quest_button_text">Criar Quest</string>
    <string name="create_quest_title">Título</string>
    <string name="create_quest_description_label">Descrição</string>

    <!-- Quest detail -->
    <string name="delete_delete_confirmation">Tem certeza de que deseja excluir a pergunta? Esta operação não pode ser desfeita.</string>

    <!-- Settings -->
    <string name="settings_toolbar_title">Configurações</string>
    <string name="settings_account">Minha conta</string>
    <string name="settings_notifications">Notificações</string>
    <string name="settings_other">Outros</string>
    <string name="settings_privacy_policy">Política de Privacidade</string>
    <string name="settings_about">Sobre</string>
    <string name="settings_change_password">Alterar senha</string>

    <string name="change_password_current_text">Senha atual</string>
    <string name="change_password_new_text">Nova senha</string>
    <string name="change_password_confirm_text">Confirme a nova senha</string>
    <string name="change_password_current_error">A senha atual não é válida.</string>
    <string name="change_password_min_chars_error">A senha deve conter no mínimo 6 caracteres.</string>
    <string name="change_password_non_matching_error">A senha e a confirmação de senha não são iguais.</string>

    <string name="logout_confirmation">Tem certeza de que deseja sair do Quest?</string>

    <!-- Search -->
    <string name="search_hint_text">Busque uma Quest pelo título…</string>
    <string name="placeholder">\@morty_smith</string>
    <string name="placeholder2">\@rick_sanchez</string>

    <!-- Details -->
    <string name="detail_title">Detalhes</string>
    <string name="detail_no_responses_text">Ainda não há respostas para esta pergunta.</string>
    <string name="update_password_button_text">Atualizar Senha</string>
    <string name="detail_option_edit">Editar</string>
    <string name="detail_option_delete">Excluir</string>

</resources>