<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="loremipsumvirtualenterprise.quest.settings.ChangePasswordActivity">

    <!-- Toolbar -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <include
            android:id="@+id/changePasswordToolbar"
            layout="@layout/toolbar_detail"
            android:elevation="7dp" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/changePasswordScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_large_margin"
            android:orientation="vertical">

            <!-- Current password field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/changePasswordCurrentTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:theme="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/changePasswordCurrentEditText"
                    style="@style/WhiteEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_password_current_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/WhiteEditTextTheme" />

            </android.support.design.widget.TextInputLayout>

            <!-- Password field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/changePasswordPasswordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:theme="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/changePasswordPasswordEditText"
                    style="@style/WhiteEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_password_new_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/WhiteEditTextTheme" />

            </android.support.design.widget.TextInputLayout>

            <!-- Confirm password field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/changePasswordConfirmTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_medium_margin"
                android:theme="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/changePasswordConfirmEditText"
                    style="@style/WhiteEditTextTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/change_password_confirm_text"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:theme="@style/WhiteEditTextTheme" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <!-- Change password Button -->
    <Button
        android:id="@+id/changePasswordActionButton"
        android:layout_width="match_parent"
        android:text="@string/create_quest_button_text"
        android:layout_alignParentBottom="true"
        style="@style/BottomButtonTheme"/>

</RelativeLayout>
